--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.nominet</groupId>
     <artifactId>geoip2</artifactId>
-    <version>2.12.1-jackson-2.6.5</version>
+    <version>2.12.1-jackson-2.6.7</version>
     <packaging>jar</packaging>
     <name>MaxMind GeoIP2 API</name>
-    <description>GeoIP2 webservice client and database reader using jackson 2.6.5 for compatability with Spark 2.2.0</description>
+    <description>GeoIP2 webservice client and database reader using jackson 2.6.7 for compatability with Spark 2.4.3</description>
     
     <organization>
         <name>Nominet UK</name>
@@ -45,30 +45,31 @@
         <dependency>
             <groupId>uk.nominet</groupId>
             <artifactId>maxmind-db</artifactId>
-            <version>1.2.3-jackson-2.6.5</version>
+            <version>1.2.3-jackson-2.6.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.5</version>
+            <!--<version>4.5.5</version>-->
+            <version>4.5.2</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.6.5</version>
+            <version>2.6.7.1</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.6.5</version>
+            <version>2.6.7</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.6.5</version>
+            <version>2.6.7</version>
             <optional>true</optional>
         </dependency>
         <dependency>
